no wrapper for cell_depths
